--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li><span>毕业学校：</span><span>湖南科技大学</span></li>
           <li class="mes-left"><span>住 址：</span><span>广东省深圳市宝安区</span></li>
           <li><span>学 历：</span><span>全日制本科</span></li>
-          <li class="mes-left"><span>工作经验：</span><span>两年以上</span></li>
+          <li class="mes-left"><span>工作经验：</span><span>三年以上</span></li>
         </ul>
         <div id="photo">
           <img src="images/tx.jpg" />
@@ -57,80 +57,32 @@
           </p>
         </div>
       </div>
-      <h4 class="mes-title">
-        <img src="images/campus.png" />
-        <span>校内项目（Campus）</span>
-      </h4>
-      <div class="other-mes">
-        <div class="other-mes-header">
-          <span class="header-first">2016.03 - 2016.03</span>
-          <span class="header-middle">湖南科技大学逸夫楼</span>
-          <span class="header-last"></span>
-        </div>
-        <div class="practice-steep-content">
-          <ul class="practice-steep">
-            <li>项目大体为一个完全仿qq的web实时聊天网页app。</li>
-            <li>主要用到的:基本知识，jq，php，简易mysql以及wampserve。</li>
-            <li>主要模块：登录注册模块，会话列表，好友列表，以及空间客户端。</li>
-            <li>原理：通过不断的向数据库轮询取数据的方式来模拟在线聊天，后来通过websocket技术进行了改进。</li>
-          </ul>
-        </div>
-        <h4 class="mes-title">
-          <img src="images/prac.png" />
-          <span>实习经历（Intership）</span>
-        </h4>
-        <div class="other-mes">
-          <div class="other-mes-header">
-            <span class="header-first">2017.06 - 2017.08</span>
-            <span class="header-middle">湖南阿茨特网络科技有限公司</span>
-            <span class="header-last">web前端</span>
-          </div>
-          <div class="practice-steep-content">
-            <ul class="practice-steep">
-              <li>项目大体为微信网上商城开发，主要由两人负责，我负责所有前端页面的呈现；</li>
-              <li>主要用到的是vue.js框架，vue-cli脚手架，webpack打包工具，以及git，github。</li>
-              <li>主要模块：商品列表展示页，商品详情页，购物车页，订单支付页，个人中心，收货地址管理，物流详情，订单的四种状态（未支付，已支付，待收货，已收货），后台管理及其相关功能。</li>
-              <li>主要用到的插件：vue-area（地址省市区选择插件），echarts（后台销量数据的折线或圆柱图展示），vue-toast（用户操作的提示），上拉刷新下拉加载，轮播图等，以及一些特定要求自己编写的插件。
-              </li>
-              <li>由于团队给力，气氛活跃，总的来说开发十分顺利，提前完成了任务</li>
-            </ul>
-          </div>
-        </div>
-        <div class="other-mes">
-          <div class="other-mes-header">
-            <span class="header-first">2017.11 - 2018.03</span>
-            <span class="header-middle">湖北金拓维信息技术有限公司</span>
-            <span class="header-last">web前端</span>
-          </div>
-          <div class="practice-steep-content">
-            <ul class="practice-steep">
-              <li>主要参与一些PC端系统的开发。</li>
-              <li>在此期间，是非常快上手项目的实习生，也分担了大型系统构建的任务。</li>
-              <li>主要负责方面：开发前期配置文件的编写，界面的构建，大型文件树结构的构建（如：多级文件树的增删改查，以及预览上传等），参与界面的调整讨论，JQ框架Easyui的使用，以及修改他人代码的BUG等。</li>
-              <li>实习空余期间，也开始补充新的知识，如node等。</li>
-            </ul>
-          </div>
-        </div>
-        <div class="other-mes">
-          <div class="other-mes-header">
-            <span class="header-first">2018.03 - 2018.03</span>
-            <span class="header-middle"></span>
-            <span class="header-last">web前端</span>
-          </div>
-          <div class="practice-steep-content">
-            <ul class="practice-steep">
-              <li>目的：对之前实习所学知识的再实践，主要包括vue，代码封装，实践node知识，以及服务器搭建</li>
-              <li>类似于论坛的app。</li>
-              <li>主要用了：vue，nodejs，nginx，mongodb等。(浅层知识))</li>
-              <li>主要步骤：前期的分析和构建，脚手架的熟悉，项目的搭建，跨域配置，本地以及云服务器的搭建和部署。</li>
-              <li>感受：初步爬坑，一个问题可以卡到怀疑人生，幸好还是解决了。</li>
-            </ul>
-          </div>
-        </div>
         <h4 class="mes-title company-title">
           <img src="images/company.png" />
           <span>工作经历（Company）</span>
         </h4>
+        <div class="other-mes">
+          <div class="other-mes-header">
+            <span class="header-first">2018.11 - 2019.09</span>
+            <span class="header-middle">智德工场(深圳)教育科技有限公司</span>
+            <span class="header-last">web前端</span>
+          </div>
+          <div class="practice-steep-content">
+            <ul class="practice-steep">
+              <li>主要从事小程序，混合，以及原生开发</li>
+              <li>小程序
+                <ol class="child-ul">
+                  <li>对现有小程序框架的对比，最终选择了uniapp进行开发</li>
+                  <li>项目重构：整个小组成员在不项目延期的情况下对老项目进行了多次面目全非的改动，比如升级ts，文件分类资源按需加载，页面模块化等。</li>
+                  <li>项目优化：修复老项目一些逻辑缺陷，重新分析资源的引入，降低入口文件大小，惰性加载，
+                    根据不同项目实际情况对ssr逻辑的重构（页面响应效果差不多提升了一两倍），以及一些资源的缓存。与原生联调对webview的优化。</li>
+                  <li>对第三方库的再封装，一些浏览器稀有api的研究，以及常用的vue组件的封装和插件的发布， 如：上拉加载，
+                    下拉刷新，axios等三方库的再次封装，toast等常见组件的封装。</li>
+                </ol>
+              </li>
+            </ul>
+          </div> 
+        </div>
         <div class="other-mes">
           <div class="other-mes-header">
             <span class="header-first">2018.06 - 2019.10</span>
@@ -190,16 +142,7 @@
               </li>
               </ul>
               <ul class="practice-steep-two">
-                <li>在flutter 1.0正式发布的时候，也是蹭了把热度，搞了下flutter。</li>
-                <li>
-                  项目就是把之前自学做的那个论坛类app用dart语法去重构几个页面，向flutter-plugin库提交了webview安卓开启debug模式的代码，由于签署谷歌开发者协议耽误了时间，在那短短的半天时间已经被修复，并没有被采纳，蹭热度失败。
-                </li>
-              </ul>
-              <ul class="practice-steep-two">
-                <li>在flutter 1.0正式发布的时候，也是蹭了把热度，搞了下flutter。</li>
-                <li>
-                  项目就是把之前自学做的那个论坛类app用dart语法去重构几个页面，向flutter-plugin库提交了webview安卓开启debug模式的代码，由于签署谷歌开发者协议耽误了时间，在那短短的半天时间已经被修复，并没有被采纳，蹭热度失败。
-                </li>
+                <li>学习flutter</li>
               </ul>
               <ul class="practice-steep-two">
                 <li>平时会利用老项目的一些页面做一些技术实践，后台node也采用了node+mysql重构。</li>
@@ -214,6 +157,72 @@
               </ul>
             </div>
           </div>
+          <div class="other-mes">
+            <div class="other-mes-header">
+              <span class="header-first">2017.11 - 2018.03</span>
+              <span class="header-middle">湖北金拓维信息技术有限公司</span>
+              <span class="header-last">web前端</span>
+            </div>
+            <div class="practice-steep-content">
+              <ul class="practice-steep">
+                <li>主要参与一些PC端系统的开发。</li>
+                <li>在此期间，是非常快上手项目的实习生，也分担了大型系统构建的任务。</li>
+                <li>主要负责方面：开发前期配置文件的编写，界面的构建，大型文件树结构的构建（如：多级文件树的增删改查，以及预览上传等），参与界面的调整讨论，JQ框架Easyui的使用，以及修改他人代码的BUG等。</li>
+                <li>实习空余期间，也开始补充新的知识，如node等。</li>
+              </ul>
+            </div>
+          </div>
+          <div class="other-mes">
+            <div class="other-mes-header">
+              <span class="header-first">2017.06 - 2017.08</span>
+              <span class="header-middle">湖南阿茨特网络科技有限公司</span>
+              <span class="header-last">web前端</span>
+            </div>
+            <div class="practice-steep-content">
+              <ul class="practice-steep">
+                <li>项目大体为微信网上商城开发，主要由两人负责，我负责所有前端页面的呈现；</li>
+                <li>主要用到的是vue.js框架，vue-cli脚手架，webpack打包工具，以及git，github。</li>
+                <li>主要模块：商品列表展示页，商品详情页，购物车页，订单支付页，个人中心，收货地址管理，物流详情，订单的四种状态（未支付，已支付，待收货，已收货），后台管理及其相关功能。</li>
+                <li>主要用到的插件：vue-area（地址省市区选择插件），echarts（后台销量数据的折线或圆柱图展示），vue-toast（用户操作的提示），上拉刷新下拉加载，轮播图等，以及一些特定要求自己编写的插件。
+                </li>
+                <li>由于团队给力，气氛活跃，总的来说开发十分顺利，提前完成了任务</li>
+              </ul>
+            </div>
+          </div>
+          <div class="other-mes">
+            <div class="other-mes-header">
+              <span class="header-first">2018.03 - 2018.03</span>
+              <span class="header-middle"></span>
+              <span class="header-last">web前端</span>
+            </div>
+            <div class="practice-steep-content">
+              <ul class="practice-steep">
+                <li>目的：对之前实习所学知识的再实践，主要包括vue，代码封装，实践node知识，以及服务器搭建</li>
+                <li>类似于论坛的app。</li>
+                <li>主要用了：vue，nodejs，nginx，mongodb等。(浅层知识))</li>
+                <li>主要步骤：前期的分析和构建，脚手架的熟悉，项目的搭建，跨域配置，本地以及云服务器的搭建和部署。</li>
+                <li>感受：初步爬坑，一个问题可以卡到怀疑人生，幸好还是解决了。</li>
+              </ul>
+            </div>
+          </div>
+          <h4 class="mes-title">
+            <img src="images/campus.png" />
+            <span>校内项目（Campus）</span>
+          </h4>
+          <div class="other-mes">
+            <div class="other-mes-header">
+              <span class="header-first">2016.03 - 2016.03</span>
+              <span class="header-middle">湖南科技大学逸夫楼</span>
+              <span class="header-last"></span>
+            </div>
+            <div class="practice-steep-content">
+              <ul class="practice-steep">
+                <li>项目大体为一个完全仿qq的web实时聊天网页app。</li>
+                <li>主要用到的:基本知识，jq，php，简易mysql以及wampserve。</li>
+                <li>主要模块：登录注册模块，会话列表，好友列表，以及空间客户端。</li>
+                <li>原理：通过不断的向数据库轮询取数据的方式来模拟在线聊天，后来通过websocket技术进行了改进。</li>
+              </ul>
+            </div>
           <h4 class="mes-title">
             <img id="cursorily" src="images/cursorily.png" />
             <span>前端涉猎（Cursorily）</span>
