--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>web前端+肖鹏飞+湖南科技大学</title>
-  <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="stylesheet" type="text/css" href="./index.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     </div>
     <div class="person-mes">
       <h4 class="mes-title">
-        <img src="images/person.png" />
+        <img src="./images/person.png" />
         <span>个人信息（Personal Info）</span>
       </h4>
       <div class="mes-detail">
@@ -36,12 +36,12 @@
           <li class="mes-left"><span>工作经验：</span><span>三年以上</span></li>
         </ul>
         <div id="photo">
-          <img src="images/tx.jpg" />
+          <img src="./images/tx.jpg" />
         </div>
       </div>
 
       <h4 class="mes-title">
-        <img src="images/eduction.png">
+        <img src="./images/eduction.png">
         <span>教育背景（Eduction）</span>
       </h4>
       <div class="other-mes">
@@ -58,7 +58,7 @@
         </div>
       </div>
         <h4 class="mes-title company-title">
-          <img src="images/company.png" />
+          <img src="./images/company.png" />
           <span>工作经历（Company）</span>
         </h4>
         <div class="other-mes">
@@ -219,7 +219,7 @@
             </div>
           </div>
           <h4 class="mes-title">
-            <img src="images/campus.png" />
+            <img src="./images/campus.png" />
             <span>校内学习（Campus）</span>
           </h4>
           <div class="other-mes">
@@ -229,7 +229,7 @@
               </ul>
             </div>
           <h4 class="mes-title">
-            <img id="cursorily" src="images/cursorily.png" />
+            <img id="cursorily" src="./images/cursorily.png" />
             <span>前端涉猎（Cursorily）</span>
           </h4>
           <div class="other-mes">
@@ -242,7 +242,7 @@
               </ul>
             </div>
             <h4 class="mes-title">
-              <img src="images/self.png" />
+              <img src="./images/self.png" />
               <span>自我评价（Self-assessment）</span>
             </h4>
             <div class="other-mes">
@@ -277,7 +277,7 @@
               本简历pc端，手机端兼容
             </div>
           </div>
-          <script type="text/javascript" src="index.js"></script>
+          <script type="text/javascript" src="./index.js"></script>
 </body>
 
 </html>
