feat: 修改错别字

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
             <li class="li-title">背景介绍
               <ol class="child-ul">
                 <li>智德工场是一家由教育、图书发行与互联网三个行业的专家团队组建而成的新型互联网+教育科技图书公司，所开发的项目主要是为老师提供减负发展、监控学生学习阅读好工具。
-                  为家长学生提供依据部编版语文新课标搭建的社区化语文教育综合平台而打造的一系列app</li>
+                  为家长学生提供依据部编版语文新课标搭建的社区化语文教育综合平台而打造的一系列app。</li>
               </ol>
             </li>
             <li>主要从事小程序，混合，以及原生开发</li>
             <li class="li-title">微信小程序
               <ol class="child-ul">
-                <li><span class="li-title">项目描述：</span>主要分为教师端和学生/家长端连个小程序，老师可以借助教师端发布打卡，作业，通知，阅读闯关等一系列学习行为，根据学生应答
+                <li><span class="li-title">项目描述：</span>主要分为教师端和学生/家长端两个小程序，老师可以借助教师端发布打卡，作业，通知，阅读闯关等一系列学习行为，根据学生应答
                 行为，智能的计算出学生的学习详细数据，便于老师对每个学生学习质量的把控。学生可借助学生/家长端来完成老师相关任务，获得相关奖励，也可与同学们互相交流学习心得等。</li>
                 <li>主要负责：框架调研，技术选型，业务开发，性能优化。</li>
                 <li>项目主要采用uniapp进行开发，利用三方库依赖于webpack的特性，编写指定脚本，提取公共组件库，进行多小程序复用；利用vue-cli使用的inquirer
