--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <ul>
           <li>
             前端:
-            基本知识（html,css,js），JQ，vue，vue-ssr，typescript，react，react-next，微信小程序，git，webpack，rollup，flutter，uniapp等。
+            基本知识（html,css,js），JQ，vue，vue-ssr，typescript，react，react-next，微信小程序，git，webpack，rollup，flutter，uniapp，docker等。
           </li>
           <li>后端：node.js，mysql(增删改查)，mongodb，基础的nginx转发，IIS搭建。</li>
         </ul>
@@ -95,9 +95,9 @@
                 行为，智能的计算出学生的学习详细数据，便于老师对每个学生学习质量的把控。学生可借助学生/家长端来完成老师相关任务，获得相关奖励，也可与同学们互相交流学习心得等。</li>
                 <li>主要负责：框架调研，技术选型，业务开发，性能优化。</li>
                 <li>项目主要采用uniapp进行开发，利用三方库依赖于webpack的特性，编写指定脚本，提取公共组件库，进行多小程序复用；利用vue-cli使用的inquirer
-                  包，进行多环境菜单区分。基础库的封装如：支持ts的自定义状态管理，对基础组件拆分成视图层和逻辑层，工具库的提取等等。
+                  包，进行多环境菜单区分。基础库的封装如：支持ts的自定义状态管理，对基础组件拆分成视图层和逻辑层，工具库的提取，题型库封装(连线题，认读生字，阅读提升等各种)等等。
                 </li>
-                <li>主要模块：班级圈(动态，作业，通知，我的发表，班级文化)，帖子详情等众多重要模块，教师端和学生端各占一半的开发任务。</li>
+                <li>主要模块：班级圈(动态，作业，通知，我的发表，班级文化)，帖子详情，老师批改作业等众多重要模块，教师端和学生端各占一半的开发任务。</li>
                 <li>项目地址：微信搜索《小獴阅读》和《小獴阅读教师端》</li>
               </ol>
             </li>
@@ -294,10 +294,10 @@
             </div>
             <div class="blog" class="footer">
               <span>或国内地址：</span><span><a
-                  href="https://vitaminaq.cn/my-cv/index.html">https://vitaminaq.cn/my-cv/index.html</a> </span>
+                  href="https://vitaminaq.cn/my-cv/index.html">https://vitaminaq.cn/my-cv/index.html</a></span>
             </div>
             <div class="blog" class="footer">
-              本简历pc端，手机端兼容
+              本简历pc端，手机端兼容(ps：手机预览如果字体较小，请双手缩放)
             </div>
           </div>
           <script type="text/javascript" src="index.js"></script>
